0.61 - added query filter plugin framework
	added regex filter
	added normalization translation

0.60 - fixed true->false transposition in sqlrservercontroller::interceptQuery
		that could lead to a reLogIn loop
	disabled -Werror for gcc < 2.7
	applied George Carrette's patch to fix PDO connectstring options
	migrated directory/file paths info into sqlrpaths class
	removed undocumented and not-so-relevent-these-days
		MAX_CONNECTIONS/overridemaxconnections failsafe in sqlr-start
	fixed java header detection for javac located in /usr/bin
	updated java api to support non-null-tolerant implementations of
		environment::NewStringUTF()
	the perl api builds correctly on OSR5 again
	the postgresql sslmode is omitted entirely from the connect string now,
		if it's disabled, to prevent problems with older versions of
		postgresql that don't support the parameter at all
	mono 2.8 or greater is required now
	added a datedelimiters attribute to the instance tag in sqlrelay.conf
		to limit what date delimiters are used when translating dates
	re-added mssqlserver detection, which had been accidentally removed
	fixed statically-linked build
	fixed mysql lob field bug that could cause a crash

0.59 - updated docs, removed some Cygwin-specific info
	added support for login warnings
	made bind variable buffers dynamic on the client side
	added maxbindvars parameter on the server side
	binding a NULL to an integer works with db2 now
	moved getting started with DB docs into the cloud
	added a semaphore to ensure that the listener doesn't hand off the
		client to the connection until the connection is ready,
		elimiating a race condition on the handoff socket that could
		occur if the connection timed out waiting for the listener
		just after the listener had decided to use that connection
	oracle temp tables that need to be truncated at the end of the session
		are truncated with "truncate table xxx" now rather than
		"delete from xxx"